# cautious-winner

./: .gitignore  CMakeLists.txt  README.md  cloc  cmake_uninstall.cmake.in  logs  mainWindow.cpp  mainWindow.hpp  tree
client/: CMakeLists.txt
client/resources/: resources.qrc
client/src/: main.cpp
client/src/auth/: authWidget.cpp  errorDialog.hpp  guestWidget.cpp  loginWidget.cpp  regWidget.hpp  startWidget.cpp  startWidget.hpp
client/src/main/: bookWidget.cpp  bookWidget.hpp  mainWindow.cpp  mainWindow.hpp  mapWidget.cpp  mapWidget.hpp  pSlot.cpp  parkWidget.cpp  parkWidget.hpp  parkingTableWidget.cpp  parkingTableWidget.hpp  slotStatusTable.cpp  slotStatusTable.hpp
client/src/network/: Client.cpp  Client.hpp
client/themes/: dark_theme.qss  hacker_theme.qss  light_theme.qss  themes.qrc
include/: validation.hpp
server/: CMakeLists.txt
server/database/: db.sqlite  diagram.puml  init_db.sql
server/src/: main.cpp
server/src/database/: Database.cpp  Database.hpp
server/src/models/: Parking.cpp  Parking.hpp  Slot.cpp  Slot.hpp  User.cpp  User.hpp
server/src/network/: Server.cpp  Server.hpp
src/: authWidget.cpp  authWidget.hpp  errorDialog.cpp  guestWidget.cpp  guestWidget.hpp  login.cpp  login.hpp  loginWidget.cpp  loginWidget.hpp  main.cpp  mainWidget.cpp  mainWidget.hpp  mainWindow.cpp  mainWindow.hpp  mapWidget.cpp  mapWidget.hpp  pSlot.cpp  pSlot.hpp  regWidget.cpp  regWidget.hpp  startWidget.cpp  startWidget.hpp  validation.cpp  validation.hpp
